Crash with "simple" boolean modifier and opening blend file crashes again #39997

Closed
opened 2014-05-02 11:45:24 +02:00 by Oliver Bo · 15 comments

System Information
Operating system and graphics card
Software OS X 10.9.2 (13C1021)
Grafikkarte NVIDIA GeForce GT 750M 2048 MB

Blender Version
Broken: 2.70a f93bc76 and Dev 2.70 6416979
Short description of error
I have four cubes differencing Susan model. Save it modeled it and it worked fine. After moving to edit and back from Susan Blender crashes.
Opening the Blend file also crashes in 2.70a but runs endless in most current dev version mentioned above.

Exact steps for others to reproduce the error
Open attached blend file and you will see a crash/endless loop

**System Information** Operating system and graphics card Software OS X 10.9.2 (13C1021) Grafikkarte NVIDIA GeForce GT 750M 2048 MB **Blender Version** Broken: 2.70a f93bc76 and Dev 2.70 6416979 **Short description of error** I have four cubes differencing Susan model. Save it modeled it and it worked fine. After moving to edit and back from Susan Blender crashes. Opening the Blend file also crashes in 2.70a but runs endless in most current dev version mentioned above. **Exact steps for others to reproduce the error** Open attached blend file and you will see a crash/endless loop
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @oliverbojahr

Added subscriber: @oliverbojahr
Author
[test-3d-slicer.blend](https://archive.blender.org/developer/F86661/test-3d-slicer.blend)
Member

Added subscribers: @Sergey, @LukasTonne

Added subscribers: @Sergey, @LukasTonne
Member

@Sergey: your area i guess

@Sergey: your area i guess
Sergey Sharybin was assigned by Lukas Tönne 2014-05-02 12:12:14 +02:00
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

The 2.70a is good with the sample file under Linux 64. It waits several seconds but I think this is normal with the modifiers.

The 2.70a is good with the sample file under Linux 64. It waits several seconds but I think this is normal with the modifiers.
Author

Wow this is strange.

You're right: I also can open the file I downloaded. But I still cannot open the original. It is not relate to the filename nor the folder location.

I try to attach a zipped one. Maybe this helps.

Wow this is strange. You're right: I also can open the file I downloaded. But I still cannot open the original. It is not relate to the filename nor the folder location. I try to attach a zipped one. Maybe this helps.
Author
[test-3d-slicer.blend.zip](https://archive.blender.org/developer/F86765/test-3d-slicer.blend.zip)

This issue was referenced by blender/blender-addons-contrib@e08db08a84

This issue was referenced by blender/blender-addons-contrib@e08db08a84bffaab27bc4562fd41f44756eb2e3e

This issue was referenced by e08db08a84

This issue was referenced by e08db08a84bffaab27bc4562fd41f44756eb2e3e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e08db08a84.

Closed by commit e08db08a84.
Author

Confirm it's working now with current develop branch (2a3cdea)

Pretty impressed by your response time. I do so much enjoy Blender.

Confirm it's working now with current develop branch (2a3cdea) Pretty impressed by your response time. I do so much enjoy Blender.

It wasn't the fastest response tho because the bug was really nasty threading issues. The fix is only short-run, for the long-run we'd need much bigger changes including changes to the dependency graph.

Anyway, great to hear it all works now!

It wasn't the fastest response tho because the bug was really nasty threading issues. The fix is only short-run, for the long-run we'd need much bigger changes including changes to the dependency graph. Anyway, great to hear it all works now!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39997
No description provided.